2012-04-24  Yuzhu Shen  <yzshen@chromium.org>

        [chromium] Add a description field in WebURLError and show failure description in the inspector network tab.
        https://bugs.webkit.org/show_bug.cgi?id=84566

        Reviewed by Pavel Feldman.

        * chromium/public/WebURLError.h:
        (WebURLError):

2012-04-18  James Robinson  <jamesr@chromium.org>

        [chromium] Use TextureLayerChromium for WebGL content instead of a dedicated layer type
        https://bugs.webkit.org/show_bug.cgi?id=84311

        Reviewed by Adrienne Walker.

        Remove some unused getters.

        * chromium/public/WebExternalTextureLayer.h:
        (WebExternalTextureLayer):

2012-04-20  Dana Jansens  <danakj@chromium.org>

        [chromium] WebFilterOperations API does not compile or dynamically link
        https://bugs.webkit.org/show_bug.cgi?id=84506

        Reviewed by James Robinson.

        Non-inline functions need WEBKIT_EXPORT in their declarations,
        and the type used in the WebPrivateOwnPtr needs to be forward-
        declared even when WEBKIT_IMPLEMENTATION is not defined.

        * chromium/public/WebFilterOperations.h:
        (WebKit::WebFilterOperations::WebFilterOperations):
        (WebFilterOperations):

2012-04-20  James Robinson  <jamesr@chromium.org>

        [chromium] Plumb a compositor surface ready notification through to the threaded compositor
        https://bugs.webkit.org/show_bug.cgi?id=84305

        Reviewed by Adrienne Walker.

        Add a notification for when the compositor surface associated with a given view is ready to use.

        * chromium/public/WebLayerTreeView.h:
        (WebLayerTreeView):

2012-04-16  James Robinson  <jamesr@chromium.org>

        [chromium] Convert WebPluginContainerImpl over to use WebExternalTextureLayer
        https://bugs.webkit.org/show_bug.cgi?id=84120

        Reviewed by Adrienne Walker.
