@@ -1,3 +1,14 @@
+2012-04-25  Gavin Peters  <gavinp@chromium.org>
+
+        Move WebReferrerPolicy.h from WebKit to Platform
+        https://bugs.webkit.org/show_bug.cgi?id=84539
+
+        Reviewed by Adam Barth.
+
+        * Platform.gypi:
+        * chromium/public/WebReferrerPolicy.h: Copied from Source/WebKit/chromium/public/WebReferrerPolicy.h.
+        (WebKit):
+
 2012-04-24  Yuzhu Shen  <yzshen@chromium.org>
 
         [chromium] Add a description field in WebURLError and show failure description in the inspector network tab.
